update arca, first phase compelte
